--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,17 @@
         "symfony/asset-mapper": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
+        "symfony/emoji": "7.1.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.1.*",
         "symfony/intl": "7.1.*",
         "symfony/runtime": "7.1.*",
         "symfony/stimulus-bundle": "^2.19",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-live-component": "^2.19",
         "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/intl-extra": "^3.13",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
